--- a/src/main/resources/com/example/businessproject/SignIn.fxml
+++ b/src/main/resources/com/example/businessproject/SignIn.fxml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 600; -fx-pref-width: 900; -fx-spacing: 20;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="UsernameSignInInput" layoutX="338.0" layoutY="162.0" style="-fx-pref-width: 200;" />
-      <Text layoutX="338.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Text layoutX="373.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign In" textAlignment="CENTER">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sign In" textAlignment="CENTER">
          <font>
             <Font size="29.0" />
          </font>
       </Text>
-      <TextField fx:id="PasswordSignInInput" layoutX="338.0" layoutY="233.0" style="-fx-pref-width: 200;" />
-      <Text layoutX="338.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <Button fx:id="SignInButton" layoutX="349.0" layoutY="280.0" mnemonicParsing="false" style="-fx-pref-width: 175; -fx-pref-height: 25; -fx-background-color: rgb(83,144,254); -fx-background-radius: 20;" text="Sign In" textAlignment="CENTER" textFill="#fffbfb" />
-      <Button fx:id="CreateAccountButton" layoutX="349.0" layoutY="358.0" mnemonicParsing="false" style="-fx-pref-width: 175; -fx-pref-height: 25; -fx-background-color: rgb(83,144,254); -fx-background-radius: 20;" text="Create An Account" textAlignment="CENTER" textFill="#fffbfb" />
-      <Text layoutX="392.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Or Sign Up" textAlignment="CENTER" />
+      <VBox alignment="CENTER" maxHeight="225.0" maxWidth="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-spacing: 10;">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <TextField fx:id="UsernameSignInInput" maxWidth="200.0" minWidth="100.0" prefWidth="200.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </TextField>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <TextField fx:id="PasswordSignInInput" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+            <Button fx:id="SignInButton" mnemonicParsing="false" style="-fx-pref-width: 175; -fx-pref-height: 25; -fx-background-color: rgb(83,144,254); -fx-background-radius: 20;" text="Sign In" textAlignment="CENTER" textFill="#fffbfb" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Or Sign Up" textAlignment="CENTER" />
+            <Button fx:id="CreateAccountButton" mnemonicParsing="false" style="-fx-pref-width: 175; -fx-pref-height: 25; -fx-background-color: rgb(83,144,254); -fx-background-radius: 20;" text="Create An Account" textAlignment="CENTER" textFill="#fffbfb" />
+         </children>
+         <VBox.margin>
+            <Insets left="350.0" right="350.0" />
+         </VBox.margin>
+      </VBox>
    </children>
-</Pane>
+</VBox>
